[gd_scene load_steps=29 format=3 uid="uid://d0sta1lv6shgl"]

[ext_resource type="PackedScene" uid="uid://b1245qux56fh4" path="res://Scenes/Classes/defence_tower_class.tscn" id="1_lif67"]
[ext_resource type="Texture2D" uid="uid://cctmmekbj7v13" path="res://Assets/Images/UI/InformationBar/Based.png" id="2_6x055"]
[ext_resource type="Script" path="res://Scripts/DefenceTowers/tower_panel_ui_based.gd" id="3_5lijm"]
[ext_resource type="PackedScene" uid="uid://drjvqvw33m3ab" path="res://Scenes/DefenceTowers/tower_button.tscn" id="3_m4lh5"]
[ext_resource type="Texture2D" uid="uid://bhsthcackiu24" path="res://Assets/Images/DefenceTowers/Archers/LV1-3.png" id="4_8fvep"]
[ext_resource type="Texture2D" uid="uid://vclyu31n33ay" path="res://Assets/Images/DefenceTowers/Archers/LV1-3-select.png" id="5_6ba2a"]
[ext_resource type="Texture2D" uid="uid://d0wd2gxc2xqmp" path="res://Assets/Images/DefenceTowers/Archers/LV1-3NO.png" id="6_6niuh"]
[ext_resource type="Texture2D" uid="uid://csevj3nqlbapv" path="res://Assets/Images/DefenceTowers/Barracks/LV1-3.png" id="7_demo3"]
[ext_resource type="Texture2D" uid="uid://b1yqwaqswmrgd" path="res://Assets/Images/DefenceTowers/Barracks/LV1-3-select.png" id="8_rqx4f"]
[ext_resource type="Texture2D" uid="uid://fc4yvchabufk" path="res://Assets/Images/DefenceTowers/Barracks/LV1-3NO.png" id="9_1323b"]
[ext_resource type="Texture2D" uid="uid://du23qemscr0yc" path="res://Assets/Images/DefenceTowers/Bombards/LV1-3.png" id="10_by33t"]
[ext_resource type="Texture2D" uid="uid://dcetc8n27fljb" path="res://Assets/Images/DefenceTowers/Bombards/LV1-3-select.png" id="11_vi4hf"]
[ext_resource type="Texture2D" uid="uid://cfyb17ukcxgac" path="res://Assets/Images/DefenceTowers/Bombards/LV1-3NO.png" id="12_lju15"]
[ext_resource type="Texture2D" uid="uid://cdax1csfuitmw" path="res://Assets/Images/DefenceTowers/Magics/LV1-3.png" id="13_xdwb6"]
[ext_resource type="Texture2D" uid="uid://vq04q7a31kd7" path="res://Assets/Images/DefenceTowers/Magics/LV1-3-select.png" id="14_hnjjn"]
[ext_resource type="Texture2D" uid="uid://bn1esyxq6owua" path="res://Assets/Images/DefenceTowers/Magics/LV1-3NO.png" id="15_02vju"]
[ext_resource type="Texture2D" uid="uid://cjl5jwb0xbv0k" path="res://Assets/Images/DefenceTowers/Archers/Towers/LV1-show.png" id="17_yvqq1"]
[ext_resource type="Texture2D" uid="uid://by73o04f416y2" path="res://Assets/Images/DefenceTowers/Barracks/Towers/LV1-show.png" id="18_yf0on"]
[ext_resource type="Texture2D" uid="uid://bvgk62eh0sagv" path="res://Assets/Images/DefenceTowers/Magics/Towers/Magic-LV1-show.png" id="19_ed3xq"]
[ext_resource type="Texture2D" uid="uid://bkvr7xl1yro2c" path="res://Assets/Images/DefenceTowers/Bombards/Towers/LV1-show.png" id="20_h63d4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4r6kj"]
atlas = ExtResource("4_8fvep")
region = Rect2(17, 18, 62, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmgo0"]
atlas = ExtResource("6_6niuh")
region = Rect2(17, 18, 62, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gh14"]
atlas = ExtResource("7_demo3")
region = Rect2(17, 18, 62, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5552"]
atlas = ExtResource("9_1323b")
region = Rect2(17, 18, 62, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_r83la"]
atlas = ExtResource("10_by33t")
region = Rect2(17, 18, 62, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv6cq"]
atlas = ExtResource("12_lju15")
region = Rect2(17, 18, 62, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmtna"]
atlas = ExtResource("13_xdwb6")
region = Rect2(17, 18, 62, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_ly1uw"]
atlas = ExtResource("15_02vju")
region = Rect2(17, 18, 62, 61)

[node name="DefenceTowerBased" instance=ExtResource("1_lif67")]
tower_name = "战略点"
tower_texture = ExtResource("2_6x055")
tower_id = 0

[node name="TowerUI" parent="." index="3"]
position = Vector2(0, -3)

[node name="TowerPanelUI" parent="TowerUI" index="3"]
script = ExtResource("3_5lijm")

[node name="ArcherButton" parent="TowerUI/Circle" index="0" node_paths=PackedStringArray("tower") instance=ExtResource("3_m4lh5")]
offset_left = -130.0
offset_top = -129.0
offset_right = -68.0
offset_bottom = -68.0
texture_normal = SubResource("AtlasTexture_4r6kj")
texture_pressed = SubResource("AtlasTexture_4r6kj")
texture_hover = ExtResource("5_6ba2a")
texture_disabled = SubResource("AtlasTexture_pmgo0")
tower = NodePath("../../..")
price = 70

[node name="BarrackButton" parent="TowerUI/Circle" index="1" node_paths=PackedStringArray("tower") instance=ExtResource("3_m4lh5")]
offset_left = 62.0
offset_top = -129.0
offset_right = 124.0
offset_bottom = -68.0
texture_normal = SubResource("AtlasTexture_3gh14")
texture_pressed = SubResource("AtlasTexture_3gh14")
texture_hover = ExtResource("8_rqx4f")
texture_disabled = SubResource("AtlasTexture_x5552")
tower = NodePath("../../..")
tower_type = 1
price = 70

[node name="BombardButton" parent="TowerUI/Circle" index="2" node_paths=PackedStringArray("tower") instance=ExtResource("3_m4lh5")]
offset_left = 62.0
offset_top = 64.0
offset_right = 124.0
offset_bottom = 125.0
texture_normal = SubResource("AtlasTexture_r83la")
texture_pressed = SubResource("AtlasTexture_r83la")
texture_hover = ExtResource("11_vi4hf")
texture_disabled = SubResource("AtlasTexture_vv6cq")
tower = NodePath("../../..")
tower_type = 3
price = 125

[node name="MagicButton" parent="TowerUI/Circle" index="3" node_paths=PackedStringArray("tower") instance=ExtResource("3_m4lh5")]
offset_left = -127.0
offset_top = 64.0
offset_right = -65.0
offset_bottom = 125.0
texture_normal = SubResource("AtlasTexture_xmtna")
texture_pressed = SubResource("AtlasTexture_xmtna")
texture_hover = ExtResource("14_hnjjn")
texture_disabled = SubResource("AtlasTexture_ly1uw")
tower = NodePath("../../..")
tower_type = 2
price = 100

[node name="SellButton" parent="TowerUI/Circle" index="4"]
visible = false

[node name="TowerArea" parent="." index="6"]
scale = Vector2(1e-05, 1e-05)

[node name="ShowSlot" type="Node2D" parent="." index="7"]
visible = false
modulate = Color(1, 1, 1, 0.568627)
scale = Vector2(0.8, 0.8)

[node name="ArcherSlot" type="Sprite2D" parent="ShowSlot" index="0"]
position = Vector2(0, -28.75)
texture = ExtResource("17_yvqq1")

[node name="BarrackSlot" type="Sprite2D" parent="ShowSlot" index="1"]
visible = false
position = Vector2(2.5, -38.75)
texture = ExtResource("18_yf0on")

[node name="MagicSlot" type="Sprite2D" parent="ShowSlot" index="2"]
visible = false
position = Vector2(0, -35)
texture = ExtResource("19_ed3xq")

[node name="BombardSlot" type="Sprite2D" parent="ShowSlot" index="3"]
visible = false
position = Vector2(-1.25, -23.75)
scale = Vector2(1.76692, 1.76692)
texture = ExtResource("20_h63d4")
region_enabled = true
region_rect = Rect2(66, 84, 115, 69)

[node name="CollisionShape2D" parent="TowerSelfArea" index="0"]
disabled = true
